--- a/views/inventory.pug
+++ b/views/inventory.pug
@@ -147,8 +147,9 @@ html
 					.row
 						.container
 							.inv-small Products you have 
-							|           
-						.container
+							|
+					.container           
+						- for (var n=0; n<5; n++)
 							.col-lg-3.col-md-3.col-xs-3.product-box
 								.row
 									.product-box
