--- a/views/home.pug
+++ b/views/home.pug
@@ -28,12 +28,10 @@ html
 						li
 							a.menu-top-head(href='/inventory') Inventory
 						|             
-						li.dropdown
-							a.dropdown-toggle.menu-top-head(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
-								i.fa.fa-user-o
-								|  
-								span.caret
-								|               
+						li
+							a.menu-top-head(href='/notifications')
+								i.fa.fa-bell.margin-top-6
+								|             
 					ul.dropdown-menu
 						li
 							a(href='#') Action
