--- a/public/app.css
+++ b/public/app.css
@@ -24,7 +24,7 @@ body{
 
 .main{
 	height: 400px;
-	background: #ECECEC;
+	background: white;
 }
 
 .banner{
@@ -196,4 +196,10 @@ body{
 .save-center{
 	text-align: center;
 	margin-top: 15px;
+}
+.margin-top-8{
+	margin-top: 6px;
+}
+.notification{
+	
 }
