--- a/views/inventory.pug
+++ b/views/inventory.pug
@@ -28,12 +28,10 @@ html
 						li
 							a.menu-top-head(href='/inventory') Inventory
 						|             
-						li.dropdown
-							a.dropdown-toggle.menu-top-head(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
-								i.fa.fa-user-o
-								|  
-								span.caret
-								|               
+						li
+							a.menu-top-head(href='/notifications')
+								i.fa.fa-bell
+								|        
 					ul.dropdown-menu
 						li
 							a(href='#') Action
@@ -107,7 +105,7 @@ html
 										.col-lg-12.col-md-12.col-xs-12
 											.row.inv-box
 												.col-lg-6.col-md-6.col-xs-6
-													label.inp-label Quatnity
+													label.inp-label Quantity
 													|                             
 												.col-lg-6.col-md-6.col-xs-6
 													input.inp-info(type='text')
@@ -139,10 +137,10 @@ html
 													input.inp-radio(type='radio')
 													|  No
 													|                   
-										.col-lg-12.col-md-12.col-xs-12.save-center
-											button.btn.btn-success.btn-md.margin-right-3 Save
-											|                     
-											button.btn.btn-danger.btn-md Cancel
+								.col-lg-12.col-md-12.col-xs-12.save-center
+									button.btn.btn-success.btn-md.margin-right-3 Save
+									|                     
+									button.btn.btn-danger.btn-md Cancel
 				.col-lg-12.col-md-12.col-xs-12.suggestion
 					.row
 						.container
