--- a/views/home.pug
+++ b/views/home.pug
@@ -3,6 +3,8 @@ html
 		title Welcome
 		script(src='/jquery-3.2.1.min.js')
 		script(src='/bootstrap/dist/js/bootstrap.min.js')
+		script 
+			include recommendation.js
 		link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans')
 		link(rel='stylesheet', href='/font-awesome/css/font-awesome.min.css')
 		link(rel='stylesheet', href='/bootstrap/dist/css/bootstrap.min.css')
