--- a/views/inventory.pug
+++ b/views/inventory.pug
@@ -30,7 +30,7 @@ html
 						|             
 						li
 							a.menu-top-head(href='/notifications')
-								i.fa.fa-bell
+								i.fa.fa-bell.margin-top-4
 								|        
 					ul.dropdown-menu
 						li
@@ -148,7 +148,7 @@ html
 							|
 					.container           
 						- for (var n=0; n<5; n++)
-							.col-lg-3.col-md-3.col-xs-3.product-box
+							.col-lg-3.col-md-3.col-xs-6.product-box
 								.row
 									.product-box
 										.col-lg-8.col-md-8.col-xs-8
