--- a/views/notifications.pug
+++ b/views/notifications.pug
@@ -33,7 +33,7 @@ html
 						|             
 						li
 							a.menu-top-head(href='/notifications')
-								i.fa.fa-bell
+								i.fa.fa-bell.margin-top-4
 								|                
 					ul.dropdown-menu
 						li
@@ -68,7 +68,7 @@ html
 							.start
 								span Notifications for you
 								|                 
-								i.fa.fa-question-circle-o.how
+								i.fa.fa-question-circle-o.how(title='A list of the odor notifications sent from TripleS')
 								|
 					.col-lg-12.col-md-12.col-xs-12.suggestion.save-center
 							.container.save-center
