--- a/public/app.css
+++ b/public/app.css
@@ -1,6 +1,6 @@
-@media (min-width: 1200px){
-	.container {
-	    width: 1200px;
+@media (min-width: 412px){
+	.container-fluid {
+	    width: 100%;
 	}
 }
 
